# prefect2-flows

./: create_apis_graph_v2.py  create_apis_graph_v3.py  helper_functions.py  ingest_rdf_in_triplestore.py  intavia_translate_data.py  prefect.yaml  prefect_test_flow.py  prefect_test_flow2.py  push_rdf_file_to_github.py  pyproject.toml  query_data_from_triplestore.py  requirements.txt  updates_provided_entities.py
